--- a/index.html
+++ b/index.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
 <html>
     <head>
-            <title>Best Recipes</title>
+        <link rel="stylesheet" href="./styles.css">
     </head>
+    <p class="top">Talking Tech and AI with Google CEO Sundar Pichai!</p>
 
-    <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li>Lasagne Recipe <a href="./recipes/lasagna.html">(Click)</a></li>
-            <li>Chili-Topped Potato Soup <a href="./recipes/chili_topped_potato_soup.html">Click</a></li>
-            <li>Best Cream Of Broccoli Soup <a href="./recipes/broccoli_soup.html">Click</a></li>
-        </ul>
-    </body>
+    <p class="views">
+        3.4M view &#183; 6 months ago
+    </p>
+
+    <p class="author">Marques Brownlee ✓</p>
+
+    <p class="info">Talking tech and AI on the heels of Google I/O. Also a daily driver phone reveal from Google's CEO. Shoutout to Sundar!</p>
+
+    <p class="shop">Shop early for the best selection of holiday favourites. <span class="shoplink">Shop now</span></p>
+
+    <p class="tahoma">Tahoma Font (For Fun)</p>
+
+    <p class="greeting">Hello Ukash, How are you today?<span class="ellagro">Wanna Come Back To Ellagro?</span></p>
+
+    <div class="forukash">
+        <p class="learn">Come Learn HTML + CSS With Me</p>
+        <p class="noobtopro">Lets go from beginner to Pro Web Developers</p>
+        <p class="message">It Will Be Fun If We Do It Together, And In Sha Allah We Will Make 50k A Months</p>
+        <button class="getstarted">Get Started</button>
+    </div>
+
+    <p class="bitcoin">Bitcoin</p>
+    <p class="price">41,432.51 <span class=" usd">USD</span></p>
+    <p class="procent">+5,464.21 (25.32%) today</p>
+    <p class="after">After hours 12,342.21 <span class="pricedown">-37,955.21 (65.21%)</span></p>
+
+
 
 </html>
