--- a/Links/index.html
+++ b/Links/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="../Styles/styles.css">
     </head>
     <p class="top">Talking Tech and AI with Google CEO Sundar Pichai!</p>
 
@@ -12,6 +12,8 @@
     <p class="author">Marques Brownlee ✓</p>
 
     <p class="info">Talking tech and AI on the heels of Google I/O. Also a daily driver phone reveal from Google's CEO. Shoutout to Sundar!</p>
+
+    <a class="linkyoutube" href="../Links/youtube.html" target="_blank">Youtube</a>
 
     <p class="shop">Shop early for the best selection of holiday favourites. <span class="shoplink">Shop now</span></p>
 
